2018-12-12 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asz80/z80mch.c:
	  Fix handling of tst for eZ80, patch by Hynek Sladký.
	* src/z80/gen.c:
	  Fix an issue in 8-bit parameters to __z88dk_fastcall related to bug #2852.
	* src/hc08/ralloc2.cc:
	  Fix bug #2215.

2018-12-11 Philipp Klaus Krause <pkk AT spth.de>

	* Merged ez80_z80 branch to trunk.

2018-12-11 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/math.h,
	  device/include/sdcc-lib.h:
	  Fixes for ez80_z80 library.
	* support/regression/ports/ez80-z80/spec.mk,
	  support/regression/ports/ucz180/spec.mk:
	  Preparation for ez80_z80 regression testing.

2018-12-05 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asz80/z80mch.c:
	  Improve eZ80 support in assembler, patch by Hynek Sladký.
	* configure,
	  configure.ac,
	  device/lib/Makefile.in,
	  device/lib/ez80_z80/Makefile.in,
	  src/z80/main.c,
	  device/lib/ez80_z80:
	  ez80_z80 library.

2018-12-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp:
	  Fix bug #1847.

2018-12-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* SDCCerr.c: replaced include sdccconf.h by SDCCglobl.h, required for MSVC

2018-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Peephole function for z88dk, patch from zsdcc fork diff by Phillip Stevens.
	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/z80/gen.c,
	  src/z80/main.c:
	  More z88dk-specific calling conventions, patch from zsdcc fork diff by Phillip Stevens.

2018-12-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use lea for ez80_z80.
	* sdas/asz80/z80.h,
	  sdas/asz80/z80adr.c,
	  sdas/asz80/z80mch.c,
	  sdas/asz80/z80pst.c:
	  eZ80 support in assembler, patch by Hynek Sladký.
	* src/SDCCglue.c:
	  Use assembler ez80 mode for ez80_z80 backend.

2018-12-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  genAddrOf refactoring.

2018-11-30 Philipp Klaus Krause <pkk AT spth.de>
